force-app/main/default/objects/conference360__Session__c/fields/conference360__Average_Session_Rating__c.field-meta.xml
<CustomField>
    <fullName>conference360__Average_Session_Rating__c</fullName>
    <formula>IF(conference360__Session_Attendee_Count__c &gt; 0, 
TEXT( ROUND(conference360__Total_Ratings__c  /  conference360__Session_Attendee_Count__c, 1)) &amp; &apos; out of 5&apos;,
&apos;&apos;)</formula>
    <inlineHelpText>The rating from Session Attendees.</inlineHelpText>
    <label>Session Rating</label>
    <type>Text</type>
</CustomField>