force-app/main/default/objects/conference360__Session__c/fields/conference360__Display_Name__c.field-meta.xml
<CustomField>
    <fullName>conference360__Display_Name__c</fullName>
    <inlineHelpText>The session name that will be displayed for attendees. If blank, it will inherit the Session Name.</inlineHelpText>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>