force-app/main/default/objects/conference360__Session__c/fields/conference360__End_Date__c.field-meta.xml
<CustomField>
    <fullName>conference360__End_Date__c</fullName>
    <description>The date this session ends.</description>
    <inlineHelpText>The date this session ends.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>