force-app/main/default/objects/conference360__Session__c/fields/conference360__End_Time__c.field-meta.xml
<CustomField>
    <fullName>conference360__End_Time__c</fullName>
    <description>The time this session ends, using the event&apos;s time zone.</description>
    <inlineHelpText>The time this session ends, using the event&apos;s time zone.</inlineHelpText>
    <label>End Time</label>
    <type>Time</type>
</CustomField>