force-app/main/default/objects/conference360__Session__c/fields/conference360__Image_URL__c.field-meta.xml
<CustomField>
    <fullName>conference360__Image_URL__c</fullName>
    <inlineHelpText>Recommended Size = 810px x 250px.</inlineHelpText>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>