force-app/main/default/objects/conference360__Session__c/fields/conference360__Maximum_Registrants__c.field-meta.xml
<CustomField>
    <fullName>conference360__Maximum_Registrants__c</fullName>
    <inlineHelpText>The maximum number of registered attendees that can attend this session.</inlineHelpText>
    <label>Quantity Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>