force-app/main/default/objects/conference360__Session__c/fields/conference360__Registered__c.field-meta.xml
<CustomField>
    <fullName>conference360__Registered__c</fullName>
    <label>Registered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>