force-app/main/default/objects/conference360__Session__c/fields/conference360__Registration_Questions__c.field-meta.xml
<CustomField>
    <fullName>conference360__Registration_Questions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>These questions will be asked for each Attendee who registers for the Event during checkout.</inlineHelpText>
    <label>Registration Questions</label>
    <referenceTo>conference360__Form__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>