force-app/main/default/objects/conference360__Session__c/fields/conference360__Remaining_Seats__c.field-meta.xml
<CustomField>
    <fullName>conference360__Remaining_Seats__c</fullName>
    <inlineHelpText>Automatically set. The formula is Quantity Available - Registered session attendees.</inlineHelpText>
    <label>Quantity Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>