force-app/main/default/objects/conference360__Session__c/fields/conference360__Room_Text__c.field-meta.xml
<CustomField>
    <fullName>conference360__Room_Text__c</fullName>
    <description>If the Session has a room, different address of the venue, or a direction you&apos;d like to provide of how to find this session. Examples: &quot;Room 261&quot; or &quot;Building A, Floor 2&quot;.</description>
    <inlineHelpText>If the Session has a room, different address of the venue, or a direction you&apos;d like to provide of how to find this session. Examples: &quot;Room 261&quot; or &quot;Building A, Floor 2&quot;.</inlineHelpText>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>