force-app/main/default/objects/conference360__Session__c/fields/conference360__Session_Attendee_Count__c.field-meta.xml
<CustomField>
    <fullName>conference360__Session_Attendee_Count__c</fullName>
    <inlineHelpText>The number of Attendees that rated this Session.</inlineHelpText>
    <label>Attendee Ratings</label>
    <summaryFilterItems>
        <field>conference360__Session_Attendee__c.conference360__Rating__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>conference360__Session_Attendee__c.conference360__Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>