force-app/main/default/objects/conference360__Session__c/fields/conference360__Speakers__c.field-meta.xml
<CustomField>
    <fullName>conference360__Speakers__c</fullName>
    <description>Set automatically from the related Speakers.</description>
    <inlineHelpText>Set automatically from the related Speakers.</inlineHelpText>
    <label>Speakers</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>