force-app/main/default/objects/conference360__Session__c/fields/conference360__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>conference360__Start_Date__c</fullName>
    <description>The date this session begins.</description>
    <inlineHelpText>The date this session begins.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>