force-app/main/default/objects/conference360__Session__c/fields/conference360__Status__c.field-meta.xml
<CustomField>
    <fullName>conference360__Status__c</fullName>
    <description>The status of this Session. Set to Confirmed for it to be visible.</description>
    <inlineHelpText>The status of this Session. Set to Confirmed for it to be visible.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>