force-app/main/default/objects/conference360__Session__c/fields/conference360__Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>conference360__Status_Formula__c</fullName>
    <description>The current status of your event, event item, or session.</description>
    <formula>if(conference360__Remaining_Seats__c&lt;=0 ,
    if(conference360__Waitlist_Enabled__c == false ,&apos;Sold Out&apos;,
        if( OR(conference360__Event__r.conference360__Event_End_Date_Time_GMT__c &lt; NOW(),conference360__End_Date_Time_GMT__c  &lt; NOW()),
            if(conference360__Hide_On_Event_Page__c ==false,&apos;Registration ended (Public)&apos;,&apos;Registration ended (Private)&apos;),
            if(OR(conference360__Remaining_Waitlist_Capacity__c &gt;0 , ISNULL(conference360__Remaining_Waitlist_Capacity__c)),&apos;Sold Out, Waitlist Open&apos;,&apos;Sold Out, Waitlist Closed&apos;)
        )

        
    ),

    if(conference360__Hide_On_Event_Page__c ==false , 
            if(conference360__Event__r.conference360__Event_End_Date_Time_GMT__c &lt; NOW(),&apos;Registration ended (Public)&apos;,
                if(conference360__End_Date_Time_GMT__c  &lt; NOW(),&apos;Registration ended (Public)&apos;,
                    if(ISNULL(conference360__Start_Date_Time_GMT__c) ,&apos;Registration active (Public)&apos;,
                        if(AND(conference360__Start_Date_Time_GMT__c &lt;=NOW(),conference360__End_Date_Time_GMT__c&gt; NOW()),&apos;Registration active (Public)&apos;,
                        &apos;Pending Registration Start Date (Public)&apos;
                        )
                    )

                )
            ),
            if(conference360__Event__r.conference360__Event_End_Date_Time_GMT__c &lt; NOW(),&apos;Registration ended (Private)&apos;,
                if(conference360__End_Date_Time_GMT__c  &lt; NOW(),&apos;Registration ended (Private)&apos;,
                    if(ISNULL(conference360__Start_Date_Time_GMT__c), &apos;Registration active (Private)&apos;,
                        if(AND(conference360__Start_Date_Time_GMT__c &lt;=NOW(),conference360__End_Date_Time_GMT__c&gt; NOW()),&apos;Registration active (Private)&apos;,
                        &apos;Pending Registration Start Date (Private)&apos;
                        )
                    )
                )
            )
    )
    
)</formula>
    <inlineHelpText>The current status of your event, event item, or session.</inlineHelpText>
    <label>Status Formula</label>
    <type>Text</type>
</CustomField>