force-app/main/default/objects/conference360__Session__c/fields/conference360__Total_Ratings__c.field-meta.xml
<CustomField>
    <fullName>conference360__Total_Ratings__c</fullName>
    <label>Total Ratings</label>
    <summarizedField>conference360__Session_Attendee__c.conference360__Rating__c</summarizedField>
    <summaryFilterItems>
        <field>conference360__Session_Attendee__c.conference360__Rating__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>conference360__Session_Attendee__c.conference360__Session__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>