force-app/main/default/objects/conference360__Session__c/fields/conference360__Type__c.field-meta.xml
<CustomField>
    <fullName>conference360__Type__c</fullName>
    <inlineHelpText>Category type for this session.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attendee Registration</fullName>
            </value>
            <value>
                <fullName>Awards Dinner</fullName>
            </value>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Breakout Session</fullName>
            </value>
            <value>
                <fullName>Exhibit Hall Open</fullName>
            </value>
            <value>
                <fullName>Gala</fullName>
            </value>
            <value>
                <fullName>Happy Hour</fullName>
            </value>
            <value>
                <fullName>Keynote</fullName>
            </value>
            <value>
                <fullName>Luncheon</fullName>
            </value>
            <value>
                <fullName>Meetup</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Reception</fullName>
            </value>
            <value>
                <fullName>Seminar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>