force-app/main/default/objects/conference360__Session__c/fields/conference360__Visibility_Control__c.field-meta.xml
<CustomField>
    <fullName>conference360__Visibility_Control__c</fullName>
    <description>Dynamically show or hide Sessions based upon matching values on the Contact&apos;s Visibility Control field.</description>
    <inlineHelpText>Dynamically show or hide Sessions based upon matching values on the Contact&apos;s Visibility Control field.</inlineHelpText>
    <label>Visibility Control</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Non-Member</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>Press</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>