force-app/main/default/objects/conference360__Session__c/fields/conference360__Webinar_Password__c.field-meta.xml
<CustomField>
    <fullName>conference360__Webinar_Password__c</fullName>
    <label>Webinar/Meeting Password</label>
    <length>50</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>